[tool.poetry]
name = "tog-streamlit-demo"
version = "0.1.0"
description = "Streamlit app to demo adversarial attack (TOG)."
authors = ["Phorphawit Manasut"]
readme = "README.md"
packages = [{include = "tog_streamlit_demo"}]

[tool.poetry.dependencies]
python = "3.6.15"
numpy = "1.18.5"
tqdm = "4.49.0"
keras = "2.2.4"
tensorflow = "1.14.0"
Pillow = "^8.1.1"
matplotlib = "3.3.2"
scikit-image = "0.17.2"
easydict = "1.9"
tensorboardX = "2.0"
h5py = "2.10.0"
jupyter = "^1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
